Release 2.1:
  - Ignore case is implemented.
  - Ignore whitespace has been improved.
  - Activate option: fontchooser for editorpane.
  - Introduce option: antialias on/off.

Release 2.0:
- Implement directory diff.
- Right/Left side readonly (preference)
- Ask save settings when closing settings-tab.
- Allow multiple selections in FolderDiffPanel.
- Rescan action in FolderDiffPanel.
- tatusbar should have a bar which tells how far the diff is.
- Exclude filters. (Create preferences and store with jaxb)
- Ignore whitespace in diff.
- se newest swingx library (JTableTree has changed significantly)
- Click in JTreeTable is forgotten if it is outside length of
        node-label
- Save-as, Load buttons in settings panel disappear when frame is
        made smaller.
- Copy to left action in FolderDiffPanel.
- Copy to right action in FolderDiffPanel.
- Delete right action in FolderDiffPanel.
- Delete left action in FolderDiffPanel.
- Undo/Redo for all above actions actions.

Release 1.1.3:
  - BUG: Innerdiff sometimes didn't paint correctly
  - While scanning directory : Text "Scanning directory xxx" in StatusBar.
  - Background color of linenumber-border are now inline with the colors of
    the look and feel.
  - Paint the right side of the left scrollbar in the left JTextArea of the
    editpanel. 
  - Remember previous filter in directory diff dialog.
  - BUG: directoryscanner couldn't handle includes-array with 0 elements.
  - JMTable can now have a different renderer/editor per row/column 
    (Standard swing can only handle 1 renderer/editor per column)
  - Removed 'include defaultFilter' and replaced it with importfilter.
    It is now possible to have 'filters in filters'
  - BUG: JMeld didn't remember position of it's frame
  - BUG: Innerdiff didn't paint well when spanning more than 1 line.
  - BUG: Installed JAXB 2.0 because 2.1 needs endorsement on jdk1.6

Release 1.1.2:
  - Fixed Grouplayout issue
    - Fixed JAXB issue