@@ -3,6 +3,7 @@ Release 2.1:
   - Ignore whitespace has been improved.
   - Activate option: fontchooser for editorpane.
   - Introduce option: antialias on/off.
+  - Doubleclick on folder -> Diff all nodes contained in that folder.
 
 Release 2.0:
 - Implement directory diff.
